@@ -1,9 +1,14 @@
 2004-08-01  Han-Wen Nienhuys   <hanwen@xs4all.nl>
 
+	* lily/my-lily-parser.cc (LY_DEFINE): plug memory leak: unprotect
+	parser.
+
+	* lily/include/my-lily-lexer.hh (class Lily_lexer): smobify lexer.
+
 	* lily/include/my-lily-parser.hh: rename My_lily -> Lily
 
 	* make/mutopia-targets.make (local-WWW): don't make ps.gz
-	examples. They take huge amounts of space.
+	examples. They take a huge amount of space.
 
 	* Documentation/user/GNUmakefile: fix symlinks.
 
